exports[`test should render a default component 1`] = `
<div
  className="terra-ContentContainer">
  <div
    className="terra-ContentContainer-header" />
  <div
    className="terra-ContentContainer-main">
    <div
      className="terra-ContentContainer-main-normalizer" />
  </div>
</div>
`;

exports[`test should render a header 1`] = `
<div
  className="terra-ContentContainer">
  <div
    className="terra-ContentContainer-header">
    <p>
      Header
    </p>
  </div>
  <div
    className="terra-ContentContainer-main">
    <div
      className="terra-ContentContainer-main-normalizer" />
  </div>
</div>
`;

exports[`test should render as fill 1`] = `
<div
  className="terra-ContentContainer terra-ContentContainer--fill">
  <div
    className="terra-ContentContainer-header" />
  <div
    className="terra-ContentContainer-main">
    <div
      className="terra-ContentContainer-main-normalizer" />
  </div>
</div>
`;

exports[`test should render content 1`] = `
<div
  className="terra-ContentContainer">
  <div
    className="terra-ContentContainer-header" />
  <div
    className="terra-ContentContainer-main">
    <div
      className="terra-ContentContainer-main-normalizer">
      <p>
        test content
      </p>
    </div>
  </div>
</div>
`;
